fix(hero): heading spacing

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -174,6 +174,13 @@
 
 @media only screen and (max-width: @desktop) {
   .home {
+
+    .hero {
+      h1 {
+        margin-top: -50px;
+      }
+    }
+
     .methods {
       grid-template-columns: auto auto;
 
